<resources>
    <string name="app_name">StepCounter</string>

    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot password ?</string>
    <string name="new_user">New user ?</string>
    <string name="sign_up">Sign Up</string>
    <string name="welcome">Welcome</string>
    <string name="login">Login</string>
    <string name="sign_in_to_continue">Sign In to continue</string>
    <string name="enter_email_which_you_use_for_authentication">Enter email which you use for authentication</string>
    <string name="reset">Reset</string>
    <string name="enter_an_email_address_you_use_to_sign_in_to">Enter an email address you use to Sign In to</string>
    <string name="reset_password">Reset Password</string>
    <string name="register">Register</string>
    <string name="create_account">Create Account</string>
    <string name="name_surname">Name / Surname</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_have_account">Already have account ?</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up_to_continue">Sign Up to continue</string>
    <string name="earn_rate">%1$d / 1,000 steps</string>


    //Errors
    <string name="email_error">Email invalid</string>
    <string name="password_error">Password invalid</string>
    <string name="password_not_match">Passwords does not match</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="your_first_digital_sneakers_are_on_us_these_will_help_you_earn_your_way_up">Your first digital sneakers are on us. These will help you earn your way up</string>
    <string name="chose_your_first">Chose your first.</string>
    <string name="get_this_one">Get this one</string>
    <string name="current_price">Current price:</string>
    <string name="zero">0</string>
    <string name="wear">WEAR</string>
    <string name="shelf">SHELF</string>
    <string name="shop">SHOP</string>
    <string name="stepn">STEPN?</string>
    <string name="_2400">2400</string>
    <string name="steps">steps</string>

</resources>