<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/secondary_color"
    tools:context=".ui.auth.register.RegisterFragment">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/nameRegEt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginEnd="28dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/costum_input"
        android:fontFamily="@font/montera_regular"
        android:hint="@string/name_surname"
        android:inputType="textPersonName"
        android:paddingStart="20dp"
        android:paddingTop="20sp"
        android:paddingEnd="25dp"
        android:paddingBottom="20sp"
        android:textColor="@color/white"
        android:textColorHint="@color/gray_blue"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/emailRegEt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tipReg"
        app:layout_constraintVertical_chainStyle="packed" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/emailRegEt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginEnd="28dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/costum_input"
        android:fontFamily="@font/montera_regular"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:paddingStart="20dp"
        android:paddingTop="20sp"
        android:paddingEnd="25dp"
        android:paddingBottom="20sp"
        android:textColor="@color/white"
        android:textColorHint="@color/gray_blue"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/passwordRegEt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameRegEt"
        app:layout_constraintVertical_chainStyle="packed" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/passwordRegEt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginEnd="28dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/costum_input"
        android:fontFamily="@font/montera_regular"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingStart="20dp"
        android:paddingTop="20sp"
        android:paddingEnd="25dp"
        android:paddingBottom="20sp"
        android:textColor="@color/white"
        android:textColorHint="@color/gray_blue"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/passwordConfRegEt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailRegEt" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/passwordConfRegEt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginEnd="28dp"
        android:background="@drawable/costum_input"
        android:fontFamily="@font/montera_regular"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:paddingStart="20dp"
        android:paddingTop="20sp"
        android:paddingEnd="25dp"
        android:paddingBottom="20sp"
        android:textColor="@color/white"
        android:textColorHint="@color/gray_blue"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/registerBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordRegEt" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/registerBtn"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="28dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/custom_button_selector"
        android:fontFamily="@font/proxima_extra_bold"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:text="@string/register"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/textviewReg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/passwordConfRegEt" />

    <TextView
        android:id="@+id/textviewReg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="25dp"
        android:fontFamily="@font/proxima_semi_bold"
        android:text="@string/already_have_account"
        android:textColor="@color/gray_blue"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/backToLoginBtn"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/backToLoginBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="25dp"
        android:fontFamily="@font/montera_regular"
        android:text="@string/sign_in"
        android:textColor="@color/main_color"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textviewReg" />

    <TextView
        android:id="@+id/welcomeReg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/proxima_black"
        android:text="@string/create_account"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="@+id/tipReg"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tipReg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/proxima_semi_bold"
        android:text="@string/sign_up_to_continue"
        android:textColor="@color/gray_blue"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/emailRegEt"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/emailRegEt"
        app:layout_constraintTop_toBottomOf="@+id/welcomeReg"
        app:layout_constraintVertical_chainStyle="packed" />


</androidx.constraintlayout.widget.ConstraintLayout>