<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/secondary_color"
    tools:context=".ui.auth.reset.ResetFragment">

    <TextView
        android:id="@+id/welcome3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/proxima_black"
        android:text="@string/reset_password"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="@+id/emailEtReset"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tale_welcome3"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/proxima_semi_bold"
        android:gravity="start"
        android:text="@string/enter_an_email_address_you_use_to_sign_in_to"
        android:textColor="@color/gray_blue"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/welcome3"
        app:layout_constraintTop_toBottomOf="@+id/welcome3" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/emailEtReset"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginEnd="28dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/costum_input"
        android:fontFamily="@font/montera_regular"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:paddingStart="20dp"
        android:paddingTop="20sp"
        android:paddingEnd="25dp"
        android:paddingBottom="20sp"
        android:textColor="@color/white"
        android:textColorHint="@color/gray_blue"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@id/resetBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/resetImg" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/resetBtn"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_marginStart="28dp"
        android:layout_marginEnd="28dp"
        android:layout_marginBottom="45dp"
        android:background="@drawable/custom_button_selector"
        android:fontFamily="@font/proxima_extra_bold"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:text="@string/login"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/emailEtReset"
        app:layout_constraintStart_toStartOf="@+id/emailEtReset"
        app:layout_constraintTop_toBottomOf="@+id/emailEtReset" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/resetImg"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginBottom="50dp"
        android:src="@drawable/ic_lock"
        app:layout_constraintBottom_toTopOf="@id/emailEtReset"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tale_welcome3"
        app:layout_constraintVertical_chainStyle="packed" />


</androidx.constraintlayout.widget.ConstraintLayout>